fix bug for text aligned in the center in boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,9 @@ main {
     font-size: 16px;
     text-align: center;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #play .optionsinput {
